--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> 
 
@@ -50,8 +49,8 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jayvee R. Continedo</h1>
-            <h3>I'm a student that likes <span>Musical Instruments</span>, <span>Coding</span> and <span>playing sports.</span> Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h1 class="responsive-headline">Jayvee R. Continedo</h1>
+            <h3>A student that likes <span>Musical Instruments</span>, <span>Coding</span> and <span>playing sports.</span> Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -84,7 +83,7 @@
 
             <h2>About Me</h2>
 
-            <p>My name is Jayvee R. Continedo, 19 years old and currently lives in Lapasan, Cagayan de Oro City. I play musical instruments and currently
+            <p>I play musical instruments and currently
                 playing drums for the band One Last Drink and currently playing Guitars for the band A Twist in my Story
             </p>
 
@@ -415,7 +414,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 Jayvee</li>
+               <li>&copy; Copyright 2023 Jayvee</li>
                <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
             </ul>
 
